# docs/swagger.yaml
@@ -36,14 +36,22 @@ definitions:
       birthday:
         type: integer
       login:
+        default: Ivanov
         type: string
       name:
+        default: Иван
         type: string
       password:
+        default: password
         type: string
       permissions:
+        enum:
+        - admin
+        - read-only
+        - banned
         type: string
       surname:
+        default: Иванов
         type: string
     type: object
   user.FindUserDTO:
@@ -53,23 +61,10 @@ definitions:
       id:
         type: integer
       login:
+        default: Ivanov
         type: string
       name:
-        type: string
-      permissions:
-        type: string
-      surname:
-        type: string
-    type: object
-  user.UpdateUserDTO:
-    properties:
-      birthday:
-        type: integer
-      login:
-        type: string
-      name:
-        type: string
-      password:
+        default: Иван
         type: string
       permissions:
         enum:
@@ -78,6 +73,30 @@ definitions:
         - banned
         type: string
       surname:
+        default: Иванов
+        type: string
+    type: object
+  user.UpdateUserDTO:
+    properties:
+      birthday:
+        type: integer
+      login:
+        default: Ivanov
+        type: string
+      name:
+        default: Иван
+        type: string
+      password:
+        default: password
+        type: string
+      permissions:
+        enum:
+        - admin
+        - read-only
+        - banned
+        type: string
+      surname:
+        default: Иванов
         type: string
     type: object
   users.CreateUserResponse:
@@ -187,6 +206,26 @@ paths:
         - desc
         in: query
         name: order
+        type: string
+      - default: ""
+        description: name
+        in: query
+        name: name
+        type: string
+      - default: ""
+        description: surname
+        in: query
+        name: surname
+        type: string
+      - default: ""
+        description: login
+        in: query
+        name: login
+        type: string
+      - default: ""
+        description: permissions
+        in: query
+        name: permissions
         type: string
       - default: 0
         description: offset
