# src/internal/user/model.go
@@ -56,12 +56,10 @@ type UpdateUserDTO struct {
 }
 
 type FindUsersFilters struct {
-	tableName   struct{} `pg:"users"`
-	Name        *string  `json:"name,omitempty" default:"Иван"`
-	Surname     *string  `json:"surname,omitempty" default:"Иванов"`
-	Login       *string  `json:"login,omitempty" default:"Ivanov"`
-	Permissions *string  `json:"permissions,omitempty" enums:"admin,read-only,banned"`
-	Birthday    *int64   `json:"birthday,omitempty"`
+	Name        string `json:"name,omitempty" default:"Иван"`
+	Surname     string `json:"surname,omitempty" default:"Иванов"`
+	Login       string `json:"login,omitempty" default:"Ivanov"`
+	Permissions string `json:"permissions,omitempty" enums:"admin,read-only,banned"`
 }
 
 type Storage struct {
@@ -71,7 +69,7 @@ type Storage struct {
 type Storager interface {
 	FindOne(id int64) (*FindUserDTO, error)
 	FindByLogin(login string) (*User, error)
-	FindAll(limit, offset int, order string) (*[]FindUserDTO, int, error)
+	FindAll(limit, offset int, order string, filters *FindUsersFilters) (*[]FindUserDTO, int, error)
 	Delete(id int64) error
 	Create(dto *UserDTO) (*int64, error)
 	Update(id int64, dto *UpdateUserDTO) error
